[WIP] Toggle light/dark themes functionality

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,11 @@
   --clr-border: hsl(234, 11%, 52%);
   --bg-primary: hsl(235, 21%, 11%);
   --bg-secondary: hsl(235, 24%, 19%);
-  --gradient: linear-gradient hsl(192, 100%, 67%) to hsl(280, 87%, 65%);
+  --gradient: linear-gradient(
+    90deg,
+    hsl(192, 100%, 67%) 0%,
+    hsl(280, 87%, 65%) 100%
+  );
 }
 
 html {
@@ -21,6 +25,26 @@ body {
   font-weight: 400;
   font-size: 1.8rem;
   background-color: var(--bg-primary);
+}
+
+body.light-theme {
+  --clr-primary: hsl(235, 19%, 35%);
+  --clr-secondary: hsl(236, 9%, 61%);
+  --clr-secondary-hover: hsl(236, 33%, 92%);
+  --clr-ternary: hsl(236, 9%, 61%);
+  --clr-ternary-hover: hsl(235, 19%, 35%);
+  --clr-white: white;
+  --clr-bright-blue: hsl(220, 98%, 61%);
+  --clr-border: hsl(234, 11%, 52%);
+
+  /*
+- Light Grayish Blue: hsl(233, 11%, 84%)
+- Dark Grayish Blue: hsl(236, 9%, 61%)
+- Very Dark Grayish Blue: hsl(235, 19%, 35%)
+  */
+
+  --bg-primary: hsl(0, 0%, 98%);
+  --bg-secondary: hsl(236, 33%, 92%);
 }
 
 /* Box sizing rules */
