--- a/src/components/TodoNumber.module.css
+++ b/src/components/TodoNumber.module.css
@@ -17,6 +17,28 @@
   font-weight: 700;
 }
 
+.clear-completed:hover {
+  color: var(--clr-secondary);
+}
+
 .clear-completed {
   cursor: pointer;
+}
+
+.wrapper > div {
+  margin-top: 0;
+  display: none;
+}
+
+@media screen and (min-width: 545px) {
+  .wrapper > div {
+    display: flex;
+  }
+
+  .items-left,
+  .clear-completed,
+  .wrapper > div > p {
+    font-size: 1.4rem;
+    font-weight: 700;
+  }
 }
