--- a/src/components/AddTodo.module.css
+++ b/src/components/AddTodo.module.css
@@ -33,3 +33,27 @@
   top: 1.3rem;
   cursor: pointer;
 }
+
+@media screen and (min-width: 545px) {
+  .wrapper {
+    margin-bottom: 2.4rem;
+  }
+
+  .input {
+    height: 6.5rem;
+    padding-left: 6.8rem;
+    padding-right: 2.7rem;
+    font-size: 1.8rem;
+  }
+
+  .input::placeholder {
+    font-size: 1.8rem;
+  }
+
+  .circle {
+    width: 2.6rem;
+    height: 2.6rem;
+    left: 2.2rem;
+    top: 1.8rem;
+  }
+}
